--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 
 <ion-menu [content]="nav">
     <ion-content>
-            <img src="/assets/imgs/logo.jpg" class="img-logo" alt="">
+            <img src="/assets/imgs/logo.png" class="img-logo" alt="">
             <p class="text-logo">ImageGram</p>
             
         <ion-list>
